# quantiles

./: .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONFIG.md  CONTRIBUTING.md  README.md  SECURITY.md  SKILL.md  mise.toml
.github/workflows/: cli-release.yml  cli.yml  python.yml  typescript.yml
cli/: .gitignore  AGENTS.md  ARCHITECTURE.md  BEST_EVAL_PRACTICES.md  COMMANDS.md  Cargo.toml  EVAL_CHALLENGES.md  PROTOCOL.md  README.md  mise.toml
cli/examples/: http_client.rs
cli/examples/configs/anthropic/: quantiles.toml
cli/examples/configs/both_error/: .quantiles.toml  quantiles.toml
cli/examples/configs/cloudflare/: quantiles.toml
cli/examples/configs/custom_code/: my_eval.py  quantiles.toml
cli/examples/configs/gemini/: quantiles.toml
cli/examples/configs/openai/: quantiles.toml
cli/examples/configs/simple/: quantiles.toml
cli/scripts/: install-beta.sh  install.sh  publish-beta-artifacts-r2.sh  publish-cli-r2-beta.sh  publish-cli-r2.sh  publish-release-artifacts-r2.sh  upload-install-beta-script-r2.sh  upload-install-script-r2.sh
cli/src/: cli.rs  client.rs  config.rs  lib.rs  main.rs  metrics_store.rs  runtime.rs  time.rs
cli/src/builtins/: common.rs  custom_nocode.rs  dataset_runner.rs  input.rs  mod.rs  output.rs  similarity.rs
cli/src/builtins/custom_nocode/: data.rs  evaluation.rs  metrics.rs  mod.rs  runtime.rs
cli/src/builtins/financebench/: mod.rs
cli/src/builtins/pubmedqa/: config.rs  data.rs  eval.rs  mod.rs
cli/src/builtins/simpleqa_verified/: mod.rs
cli/src/commands/: custom_nocode_metrics.rs  init.rs  list.rs  mod.rs  resume.rs  run.rs  serve.rs  show.rs
cli/src/commands/compare/: metrics.rs  mod.rs  report.rs  run.rs  step.rs
cli/src/config/: custom_nocode.rs  mod.rs
cli/src/dataset/: cache.rs  hf_client.rs  mod.rs
cli/src/db/: db_url.rs  mod.rs  observability.rs  runs.rs  schema.rs  steps.rs  summaries.rs  workspace.rs
cli/src/db/entities/: event.rs  mod.rs  step.rs  workflow.rs  workflow_run.rs
cli/src/llm/: anthropic.rs  cloudflare.rs  gemini.rs  mod.rs  openai.rs  random.rs  random_label.rs  sampler.rs
cli/src/server/: mod.rs  types.rs
cli/src/similarity/: levenshtein.rs  mod.rs  vector.rs
cli/tests/: version.rs
custom-nocode-examples/: quantiles.toml
custom-nocode-examples/prompts/: gpqa.txt  medmcqa.txt  medqa.txt  qa.txt
python/: .gitignore  AGENTS.md  README.md  mise.toml  pyproject.toml
python-examples/: README.md  mise.toml  pyproject.toml  quantiles.toml
python-examples/src/: prompt_eval.py  pubmedqa.py
python/.github/workflows/: ci.yml
python/examples/: prompt_eval.py  pubmedqa.py
python/src/quantiles/: __init__.py  _rpc_types.py  client.py  concurrency.py  datasets.py  llm.py  metrics.py  types.py  util.py  workflow.py  workflow_context.py
python/tests/: conftest.py  test_client.py  test_datasets.py  test_metrics.py  test_util.py  test_workflow.py
python/tests/e2e/: smoke.py
scripts/: run-custom-nocode.sh
typescript/: .gitignore  AGENTS.md  README.md  biome.jsonc  mise.toml  package.json  tsconfig.json
typescript/examples/: prompt_eval.ts  run_demo.ts
typescript/src/: client.ts  index.ts  types.ts  util.ts  workflow.ts
typescript/tests/e2e/: smoke.ts
