[package]
name = "qt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arrow = "54"
async-trait = "0.1"
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
comfy-table = "7.2.1"
datafusion = "46.0.0"
dirs = "6"
fastembed = "5"
futures = "0.3"
genai = "0.6.5"
jinja = "0.1"
parquet = { version = "54", features = ["arrow"] }
rand = "0.8"
reqwest = { version = "0.13.3", features = ["json", "rustls"] }
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "time"] }
seq-macro = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10"
strsim = "0.11"
time = { version = "0.3.47", features = ["formatting", "macros", "serde"] }
tokio = { version = "1.52.1", features = ["fs", "macros", "net", "rt-multi-thread", "time"] }
toml = "0.8"
tqdm = "0.8"

[lints.clippy]
all = "deny"
allow_attributes = "deny"
pedantic = "deny"

[lints.rust]
unfulfilled_lint_expectations = "deny"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
rstest = "0.26.1"
tempfile = "3.23.0"
wiremock = "0.6"
