[project]
name = "quantiles"
version = "0.1.0"
description = "Python SDK for the Quantiles local AI workload observability server"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Aaron Schlesinger", email = "aaron@quantiles.io" },
  { name = "Golda Manuel", email = "golda@quantiles.io" },
]
keywords = ["evals", "llm", "observability", "ai", "quantiles"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["aiohttp~=3.11", "numpy~=2.4.4", "pydantic~=2.11", "scipy>=1.12.0,<2.0.0", "openai~=2.36.0"]

[project.urls]
Homepage = "https://quantiles.io"
Documentation = "https://quantiles.io/docs"
Repository = "https://github.com/quantiles-evals/quantiles"
Issues = "https://github.com/quantiles-evals/quantiles/issues"

[build-system]
requires = ["uv_build>=0.9.18,<1.0.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 2
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # import sorting
    "UP",     # pyupgrade
    "B",      # bugbear
    "SIM",    # simplify
    "C4",     # comprehensions
    "PIE",    # misc improvements
    "RET",    # return style
    "PTH",    # pathlib
    "ERA",    # commented-out code
    "RUF",    # Ruff-specific rules
    "ANN",    # annotations
    "ASYNC",  # async correctness
    # TODO: enable these. will require code fixes
    # "BLE",    # blind except
    # "TRY",    # exception style
]
extend-select = ["ANN401", "TID251"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.Any".msg = "Use a concrete type instead of typing.Any."

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true


[tool.ty.rules]
possibly-missing-attribute = "error"
unknown-argument = "error"
invalid-return-type = "error"


[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=0.27.0",
    "ruff>=0.15.12,<0.16.0",
    "ty>=0.0.40,<0.0.50",
]
